--- a/html/index.html
+++ b/html/index.html
@@ -75,6 +75,12 @@
     </header>
     <!-- header section end -->
 
+    <!-- loader section start -->
+    <section id="loader" class="loader-section d-flex align-items-center justify-content-center d-none">
+        <span class="loader"></span>
+    </section>
+    <!-- loader section end -->
+
     <!-- slider section start -->
     <section class="slider-section d-none d-sm-block">
 
