added notice and notice details page

--- a/html/index.html
+++ b/html/index.html
@@ -38,11 +38,13 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="home.html">Notice</a>
+
+                          <li class="nav-item"></li>
+                            <a class="nav-link" aria-current="page" href="notice.html">Notice Board</a>
                           </li>
+                          
                           <li class="nav-item dropdown">
                             <div class="nav-link dropbtn" role="button">Dashboard <i class="fa fa-angle-down"></i> </div>
                             <div class="dropdown-content">
@@ -550,7 +552,7 @@
                     <p>Subscribe to our newsletter to get the latest updates about our courses and events:</p>
                     <form class="form-inline">
                         <div class="input-group">
-                            <input type="email" class="form-control" placeholder="Your email">
+                            <input type="email" class="subscribe form-control text-white" placeholder="Your email">
                             <button class="btn btn-primary" type="submit">Subscribe</button>
                         </div>
                     </form>
