--- a/html/notice-detail.html
+++ b/html/notice-detail.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/owl.theme.default.min.css">
 
-    <title>Home</title>
+    <title>Notice details</title>
   </head>
   <body>
 
@@ -98,7 +98,7 @@
 
                     <!-- Notice Image (Optional) -->
                     <div class="notice-image mb-4">
-                        <img id='notice-img' src="https://www.dol.gov/sites/dolgov/files/WHD/legacy/images/flsa_1.png" alt="Notice Image" class="img-fluid rounded">
+                        <img id='notice-img' src="https://upload.wikimedia.org/wikipedia/commons/e/e0/List_of_causes_set_down_for_trail_in_the_Circuit_Court_of_Mercer_County,_at_September_term,_1807.png" alt="Notice Image" class="img-fluid rounded">
                     </div>
 
                     <!-- Notice Content -->
