--- a/html/notice.html
+++ b/html/notice.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../css/owl.theme.default.min.css">
 
-    <title>Home</title>
+    <title>Notices | Events</title>
   </head>
   <body>
 
@@ -67,7 +67,7 @@
                           </li>
                         </ul>
                         <div class="d-flex">
-                                <a class="nav-link btn-2" href="#">Login | Register</a>
+                                <a class="nav-link btn-2" href="login.html">Login | Register</a>
                         </div>
                       </div>
                     </div>
