--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <!-- google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap">
 
@@ -67,7 +70,7 @@
                           </li>
                         </ul>
                         <div class="d-flex">
-                                <a class="nav-link btn-2" href="#">Login | Register</a>
+                                <a class="nav-link btn-2" href="login.html">Login | Register</a>
                         </div>
                       </div>
                     </div>
